@@ -36,7 +36,6 @@ chmod o+t sticky || framework_failure
 
 ls --color=always > out || fail=1
 cat -A out > o1 || fail=1
-echo >> o1 || fail=1
 mv o1 out || fail=1
 
 cat <<\EOF > exp || fail=1
@@ -44,7 +43,6 @@ cat <<\EOF > exp || fail=1
 ^[[34;42mother-writable^[[0m$
 out$
 ^[[37;44msticky^[[0m$
-^[[m
 EOF
 
 compare out exp || fail=1
@@ -56,7 +54,6 @@ rm exp
 
 LS_COLORS="ow=:" ls --color=always > out || fail=1
 cat -A out > o1 || fail=1
-echo >> o1 || fail=1
 mv o1 out || fail=1
 
 cat <<\EOF > exp || fail=1
@@ -64,7 +61,6 @@ cat <<\EOF > exp || fail=1
 ^[[01;34mother-writable^[[0m$
 out$
 ^[[37;44msticky^[[0m$
-^[[m
 EOF
 
 compare out exp || fail=1
